# stechuhr

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-checks.yml  build-release-binary-windows  build-release-binary-windows.yml  cmake-single-platform.yml
src/: database.cpp  database.h  dateTimeDialog.ui  datetimedialog.cpp  datetimedialog.h  eventtype.h  main.cpp  mainDialog.ui  maindialog.cpp  maindialog.h  settings.cpp  settings.h  settingsDialog.ui  settingsdialog.cpp  settingsdialog.h  stechuhr.cpp  stechuhr.h  stechuhr.qrc
src/I10n/: stechuhr_de.qm  stechuhr_de.ts
